# devtools-course-practice

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md
cmake/: add_application.cmake  compiler.cmake  config.cmake  dependency.cmake  general.cmake  project_utils.cmake
code/: CMakeLists.txt  build-and-test.sh
code/Bykadorov-Roman/: CMakeLists.txt  Readme.md
code/Bykadorov-Roman/include/: currencyconverter.h
code/Bykadorov-Roman/src/: currencyconverter.cxx
code/Bykadorov-Roman/test/: test_currency_converter.cpp  test_main.cpp
code/Maximov-Maxim/: README.md
code/Rozanov-Anatoliy/: CMakeLists.txt  README.md
code/Rozanov-Anatoliy/include/: interpolationsearch.h
code/Rozanov-Anatoliy/src/: interpolationsearch.cxx
code/Rozanov-Anatoliy/test/: test_interpolation_search.cpp  test_main.cpp
code/Tolstolutskaya-Olga/: CMakeLists.txt  CTestTests.txt  README.md
code/Tolstolutskaya-Olga/application/: vector.cpp
code/Tolstolutskaya-Olga/include/: 3DVector.h  3DVector_application.h  3DVektor.h  s.sh  vec
code/Tolstolutskaya-Olga/src/: 3DVector_application.cxx  3DVectors.cxx  3DVektors.cxx
code/Tolstolutskaya-Olga/test/: test_3DVector.cpp  test_3DVector_application.cpp  test_main.cpp
code/buchina-julia/: CMakeLists.txt  README.md
code/buchina-julia/include/: fraction.h
code/buchina-julia/src/: fraction.cxx
code/buchina-julia/test/: test_fraction_calculator.cpp  test_main.cpp
code/fedosov-alexander/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
code/fedosov-alexander/Includes/: lengthconverter.hpp
code/fedosov-alexander/Test/: test_lengthconverter.cxx
code/fedosov-alexander/include/: lengthconverter.hpp
code/fedosov-alexander/src/: lengthconverter.cxx
code/fedosov-alexander/test/: test_lengthconverter.cxx  test_main.cpp
code/gladilov-gleb/: CMakeLists.txt  README.md
code/gladilov-gleb/include/: complexcalculator.h
code/gladilov-gleb/src/: complexcalculator.cxx
code/gladilov-gleb/test/: test_complex_calculator.cpp
code/kokoshnikov-alexey/: CMakeLists.txt  README.md
code/kokoshnikov-alexey/include/: simplecalculator.h
code/kokoshnikov-alexey/src/: simplecalculator.cxx
code/kokoshnikov-alexey/test/: test_main.cpp  test_simple_calculator.cpp
code/kornyakov-kirill-lab2/: CMakeLists.txt
code/kornyakov-kirill-lab2-old/include/: simplecalc.h
code/kornyakov-kirill-lab2/include/: simplecalc.h  simplecalculator.h
code/kornyakov-kirill-lab2/src/: simplecalculator.cxx
code/kornyakov-kirill-lab2/test/: test_simple_calculator.cpp
code/kornyakov-kirill-lab3/: CMakeLists.txt  CTestTests.txt  Makefile
code/kornyakov-kirill-lab3/include/: simplecalc.h  simplecalculator.h
code/kornyakov-kirill-lab3/test/: test_simplecalculator_application.cpp
code/kornyakov-kirill-lab4/: CTestTests.txt  Makefile
code/kornyakov-kirill-lab4-legacy/include/: simplecalc.h
code/kornyakov-kirill-lab5/: Makefile
code/kornyakov-kirill-lab5-legacy/: Makefile
code/kruchinin-dmitry/: CMakeLists.txt  README.md
code/kruchinin-dmitry/include/: node.h  stack.h
code/kruchinin-dmitry/test/: test_main.cpp  test_stack.cpp
code/paul-eduard/: CMakeLists.txt  README.md
code/paul-eduard/include/: merge-sort.h
code/paul-eduard/src/: merge-sort.cxx
code/paul-eduard/test/: test_main.cpp  test_merge_sort.cpp
code/rybakov-anton/: CMakeLists.txt  README.md
code/rybakov-anton/include/: tree.h
code/rybakov-anton/src/: tree.cxx
code/rybakov-anton/test/: test_main.cpp  test_tree.cpp
code/shochin-alexandr/: CMakeLists.txt  README.md
code/shochin-alexandr/include/: tconv.h
code/shochin-alexandr/src/: tconv.cxx
code/shochin-alexandr/test/: test_main.cpp  test_tconv.cpp
code/sirotin-nikita/: CMakeLists.txt  README.md
code/sirotin-nikita-laba2/: README.md
code/sirotin-nikita-laba2/include/: volumefigures.h
code/sirotin-nikita-laba2/src/: volumefigures.cxx
code/sirotin-nikita-laba2/test/: test_volume_figrures.cpp
code/sirotin-nikita/include/: volumefigures.h
code/sirotin-nikita/src/: volumefigures.cxx
code/sirotin-nikita/test/: test_main.cpp  test_volume_figures.cpp
code/viktor-roy/: CMakeLists.txt  README.md
code/viktor-roy/include/: mat_stat.hpp
code/viktor-roy/src/: mat_stat.cxx
code/viktor-roy/test/: test.cpp
code/vinogradov-vlad/: CMakeLists.txt  README.md
code/vinogradov-vlad/include/: leftistheap.h
code/vinogradov-vlad/src/: leftistheap.cxx
code/vinogradov-vlad/test/: test_leftist_heap.cpp  test_lheap_node.cpp  test_main.cpp
docs/source/: index.rst
